- Wine can be used in compote - DONE!!!
- All fried items in salad and cold pasta moved to a single ingredient slot - DONE!!!
- Cold pasta and yogurt meal perish timer reduced by 24 hours - DONE!!!
- Pilaf recipe changed to require rice+broth instead of rice+solid ingredient; rice requirement doubled - DONE!!!
- Whole raw eggs removed from meat stew recipe - DONE!!!
- Liquid egg added to porridge recipe topping

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Hardened resin fixed so it hardens properly
- Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- en.json cleansed of wildcraft text - DONE!!!; generally cleaned up and reorganized 
- Peanut skin model changed
- Soybean textures/shapes updated
- Dried peat bowl remapping done - DONE!!!


2.0.0-dev.3
- Scrambled egg recipe fixed
- Scrambled egg shape updated & textures updated for all liquid egg variants
- All egg visuals updated; new boiled egg texture 
- Water-glassed eggs can be cracked now
- More Animals compatibility updated, while we're doing all this egg stuff


2.0.0-dev.2
- Fixed old oil candle and other recipes crashing due to referencing the old bottles variant schema (new recipes dont account for whether a bottle is corked or not) 


2.0.0-dev.1
- New 1.20 clays integrated (thanks pizza2004!)
- Bowl recipes updated (names and remapping later) - DONE!!!
- Rolling pin tool rack transform fixed; now actually in the rack (thanks pizza2004!)
- Acorns 1.20+ compatiblity added - DONE!!!

BALANCING: 
- Salads and cold pasta allow cured sausage - DONE!!!
- Potent spirits do not cure into themselves anymore - DONE!!!
- Alcohol nutrition nerfed when in meals - DONE!!!