@@ -106,7 +106,8 @@ REBALANCING:
 - Cold pasta and yogurt meal perish timer reduced by 24 hours - DONE!!!
 - Pilaf recipe changed to require rice+broth instead of rice+solid ingredient; rice requirement doubled - DONE!!!
 - Whole raw eggs removed from meat stew recipe - DONE!!!
-- Liquid egg added to porridge recipe topping
+- Liquid egg added to porridge recipe topping - DONE!!!
+- All egg liquids can be added to appropriate meals, not just yolk
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
